--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <a href="#" class="footer-link">Contact</a>
         </div>
         <p class="footer-paragraph">
-          Copyright &copy; CodeAndCreate All Rights Reserved
+          Copyright &copy; Thanush_Bobby07 All Rights Reserved
         </p>
       </footer>
       <!-- End of Footer -->
